--- a/packages/ui-default/templates/training_detail.html
+++ b/packages/ui-default/templates/training_detail.html
@@ -1,114 +1,201 @@
-{% extends "layout/basic.html" %}
-{% block content %}
-<div class="row" data-sticky-parent>
-  {%- if Object.keys(udict).length -%}
-  <div class="medium-2 columns mobile--hide">
-    <div data-sticky="large"><div class="section side">
-      <ol class="menu">
-        <li class="menu__item nojs--hide">
-          <form method="get" id="searchForm">
-            <select name="group" class="select"{% if not groups.length %} style="display:none"{% endif %}>
-              <option value="all" selected>{{ _('All') }}</option>
-              {% for group in groups %}
-                <option value="{{ group.uids.join(',') }}">{{ group.name }}</option>
-              {% endfor %}
-            </select>
-            <input name="uid" type="text" class="search__input textbox" placeholder="{{ _('Select User') }}">
-          </form>
-        </li>
-        <ul class="enroll_user_menu">
-        {%- for uid, udoc in udict -%}
-        <li class="menu__item enroll_user_menu_item" data-uid="{{ uid }}" data-uname="{{ udoc.uname }}" {% if handler.user.hasPerm(perm.PERM_VIEW_DISPLAYNAME) and udoc.displayName %}data-displayname="{{ udoc.displayName }}"{% endif %}>
-          <a href="./{{ tdoc._id }}?uid={{ uid }}" class="menu__link{% if (handler.request.query.uid or handler.user._id) == uid %} active{% endif %}">
-            <span class="user-profile-link">
-              <img class="small user-profile-avatar v-center" loading="lazy" src="{{ avatarUrl(udoc.avatar|default('')) }}" width="20" height="20">
-              <span class="user-profile-name">
-                {% if handler.user.hasPerm(perm.PERM_VIEW_DISPLAYNAME) and udoc.displayName and udoc.displayName != udoc.uname %}
-                  {{ udoc.displayName }} ({{ udoc.uname }})
-                {% else %}
-                  {{ udoc.uname }}
-                {% endif %}
-              </span>
-            </span>
-          </a>
-        </li>
-        {%- endfor -%}
-        </ul>
-      </ol>
-    </div></div>
-  </div>
-  <div class="medium-7 columns">
-  {%- else -%}
-  <div class="medium-9 columns">
-  {%- endif -%}
-    <div class="section">
-      <div class="section__body typo">
-        {{ tdoc['content'] }}
+{% import "components/record.html" as record with context %}
+{% import "components/problem.html" as problem with context %}
+{% set expanded = 0 %}
+<div data-fragment-id="training_detail">
+  {% if handler.request.query.uid and handler.request.query.uid != handler.user._id %}
+  <blockquote class="typo note">
+    <p>{{ _('page.training_detail.see_other_user_detail').format(udict[handler.request.query.uid].uname) }}</p>
+  </blockquote>
+  {% endif %}
+  {%- for node in tdoc['dag'] -%}
+    <div data-heading-extract-to="#menu-item-training_detail" class="training__section {% if expanded < 5 and (nsdict[node['_id']]['isProgress'] or nsdict[node['_id']]['isOpen']) %}expanded{% set expanded = expanded + 1 %}{% else %}collapsed{% endif %}">
+      <div class="section__header clearfix">
+        <div class="float-left">
+          <h1 data-heading id="node-{{ node._id }}" class="section__title">{{ _('Section') }} {{ node['_id'] }}. {{ node['title'].split('\n')[0] }}</h1>
+          {% if node['title'].split('\n')[1] %}<h4>{{ node['title'].split('\n')[1] }}</h4>{% endif %}
+        </div>
+        <div class="float-right">
+          <h1 class="section__title training-section-status--text {% if nsdict[node['_id']]['isDone'] %}done{% elif nsdict[node['_id']]['isProgress'] %}progress{% elif nsdict[node['_id']]['isOpen'] %}open{% else %}invalid{% endif %}">
+            <span class="icon training-section-status--icon {% if nsdict[node['_id']]['isDone'] %}done{% elif nsdict[node['_id']]['isProgress'] %}progress{% elif nsdict[node['_id']]['isOpen'] %}open{% else %}invalid{% endif %}"></span>
+            {% if nsdict[node['_id']]['isDone'] %}
+              {{ _('Completed') }}
+            {% elif nsdict[node['_id']]['isProgress'] %}
+              {{ _('In Progress') }}
+            {% elif nsdict[node['_id']]['isOpen'] %}
+              {{ _('Open') }}
+            {% else %}
+              {{ _('Invalid') }}
+            {% endif %}
+          </h1>
+        </div>
       </div>
-      <div class="section__body typo richmedia">
-        {% if not handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
-          <blockquote class="typo note">
-            <p>{{ _('Login to join training plan') }}</p>
-          </blockquote>
-        {% elif not tsdoc.enroll %}
-          <blockquote class="typo note">
-            <p>{{ _('page.training_detail.invalid_when_not_enrolled') }}</p>
-          </blockquote>
-        {% endif %}
-        {{ tdoc.description|default('')|markdown|safe }}
-      </div>
-    </div>
-    <div class="section">
-      {% include "partials/training_detail.html" %}
-    </div>
-  </div>
-  <div class="medium-3 columns" data-sticky="large">
-    <div class="section side">
-      <div>
-        <ol class="menu">
-        {% if not tsdoc['enroll'] and handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
-          <li class="menu__item">
-            <form action="" method="POST">
-              <input type="hidden" name="operation" value="enroll">
-              <button class="menu__link" type="submit">
-                <span class="icon icon-add"></span> {{ _('Enroll Training') }}
-              </button>
-            </form>
+      <div class="section__body">
+        <ul class="supplementary dot list">
+          <li>
+            <a href="javascript:;" name="training__section__expand" class="expanded--hidden"><span class="icon icon-expand_more"></span> {{ _('expand') }}</a>
+            <a href="javascript:;" name="training__section__collapse" class="collapsed--hidden"><span class="icon icon-expand_less"></span> {{ _('collapse') }}</a>
           </li>
-        {% endif %}
-        {% if handler.user.own(tdoc) or handler.user.hasPerm(perm.PERM_EDIT_TRAINING) %}
-          <li class="menu__item"><a class="menu__link" href="{{ url('training_edit', tid=tdoc.docId) }}">
-            <span class="icon icon-edit"></span>  {{ _('Edit') }}
-          </a></li>
-          <li class="menu__item"><a class="menu__link" href="{{ url('training_files', tid=tdoc.docId) }}">
-            <span class="icon icon-file"></span> {{ _('Files') }}
-          </a></li>
-        {% endif %}
-          <li class="menu__item"><a class="menu__link" href="{{ url('wiki_help', anchor='training') }}">
-            <span class="icon icon-help"></span> {{ _('Help') }}
-          </a></li>
-          <li class="menu__seperator"></li>
-        </ol>
+          <!--
+          TODO(twd2): twd2 todo
+          <li>
+            递交了 ? 次完成该章节 (TOP ?%)
+          </li>
+          <li>
+            第 ? 个完成该章节 (总计 ? 用户完成)
+          </li>
+          -->
+        </ul>
       </div>
-      <div class="section__body typo">
-        <dl class="large horizontal">
-        {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
-          <dt>{{ _('Status') }}</dt><dd>{% if tsdoc['enroll'] %}{{ _('Completed' if tsdoc['done'] else 'In Progress') }}{% else %}{{ _('Not Enrolled') }}{% endif %}</dd>
+      <div class="training__section__detail">
+        {% if nsdict[node['_id']]['isInvalid'] %}
+          <div class="section__body">
+            <blockquote class="typo note">
+              <p>{{ _('This section cannot be challenged at present, so please complete the following sections first') }}:</p>
+              <ul>
+                {%- for nid in node['requireNids'] -%}
+                  <li>{{ _('Section') }} {{ _(nid) }}. {{ ndict[nid]['title'] }} ({{ _('Completed') }} {{ nsdict[nid]['progress'] }}%)</li>
+                {%- endfor -%}
+              </ul>
+            </blockquote>
+          </div>
         {% endif %}
-          {% if tsdoc['enroll'] %}
-          <dt>{{ _('Progress') }}</dt><dd>{{ _('Completed') }} {{ (100 * tsdoc['donePids']|length / pids|length)|round|int }}%</dd>
-          {% endif %}
-          <dt>{{ _('Enrollees') }}</dt><dd>{{ tdoc.attend|default(0) }}</dd>
-          <dt>{{ _('Created By') }}</dt>
-          <dd>{{ user.render_inline(udoc, badge=false) }}</dd>
-        </dl>
+        {% if node['content'] %}
+          <div class="section__body typo richmedia">
+            {{ node['content']|markdown|safe }}
+          </div>
+        {% endif %}
+        <div class="section__body no-padding training__problems">
+          {% set should_compare = (handler.request.query.uid or handler.user._id) != handler.user._id and tsdoc["enroll"] %}
+          <table class="data-table">
+            <colgroup>
+              {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                {% if should_compare %}
+                  <col class="col--status col--status--sm">
+                  <col class="col--status col--status--sm">
+                {% else %}
+                  <col class="col--status">
+                {% endif %}
+              {% endif %}
+              <col class="col--name">
+              <col class="col--tried">
+              <col class="col--ac">
+              <col class="col--difficulty">
+            </colgroup>
+            <thead>
+              <tr>
+                {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                  {% if should_compare %}
+                    <th class="col--status col--status--sm record-status--border">{{ _('Status') }}</th>
+                    <th class="col--status col--status--sm">{{ _('My status') }}</th>
+                  {% else %}
+                    <th class="col--status record-status--border">{{ _('Status') }}</th>
+                  {% endif %}
+                {% endif %}
+                <th class="col--name">{{ _('Problem') }}</th>
+                <th class="col--tried">{{ _('Tried') }}</th>
+                <th class="col--ac">{{ _('AC') }}</th>
+                <th class="col--difficulty">{{ _('Difficulty') }}</th>
+              </tr>
+            </thead>
+            <tbody>
+              {%- for pid in node['pids'] -%}
+                {% if pid in pdict %}
+                  {% set pdoc=pdict[pid] %}
+                  {% set psdoc=psdict[pid] %}
+                  {% set self_psdoc=selfPsdict[pid] %}
+                  <tr>
+                    {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                      {% if psdoc['rid'] %}
+                        {{ record.render_status_td(psdoc, rid_key='rid', short=should_compare) }}
+                      {% else %}
+                        <td class="col--status record-status--border"></td>
+                      {% endif %}
+                      {% if should_compare %}
+                        {% if self_psdoc['rid'] %}
+                          {{ record.render_status_td(self_psdoc, rid_key='rid', short=true) }}
+                        {% else %}
+                          <td class="col--status col--status--sm"></td>
+                        {% endif %}
+                      {% endif %}
+                    {% endif %}
+                    <td class="col--name col--problem-name">
+                      {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
+                        <form class="form--inline" action="{{ url('problem_main') }}" method="post">
+                          <input type="hidden" name="pid" value="{{ pdoc.docId }}">
+                          <input type="hidden" name="operation" value="{% if not psdoc['star'] %}star{% else %}unstar{% endif %}">
+                          <button class="star{% if psdoc['star'] %} activated{% endif %}" type="submit">
+                            <span class="starred--hide"><span class="icon icon-star--outline" data-tooltip="{{ _('Star') }}"></span></span>
+                            <span class="starred--show"><span class="icon icon-star" data-tooltip="{{ _('Unstar') }}"></span></span>
+                          </button>
+                        </form>
+                      {% endif %}
+                      {{ problem.render_problem_title(
+                        pdoc,
+                        invalid=not tsdoc['enroll'] or nsdict[node['_id']]['isInvalid'],
+                        show_tags=false
+                      ) }}
+                    </td>
+                    <td class="col--tried">{{ pdoc.nSubmit }}</td>
+                    <td class="col--ac">{{ pdoc.nAccept }}</td>
+                    
+            <style>
+
+.text-hard {
+  color: red;
+  font-weight: bold;
+}
+
+.text-medium {
+  color: orange;
+  font-weight: bold;
+}
+
+.text-easy {
+  color: green;
+  font-weight: bold;
+}
+
+.text-none {
+  color: black;
+  font-weight: bold;
+}
+</style>
+                    <td class="fenlei" data-difficulty="{{ pdoc['difficulty'] or 'none' }}">
+  {% if pdoc.nSubmit == 0 %}
+    <span class="text-none">(无)</span>
+  {% else %}
+    {% set ratio = pdoc.nAccept / pdoc.nSubmit %}
+    {% if ratio < 0.3 %}
+      <span class="text-hard">困难</span>
+    {% elif ratio < 0.6 %}
+      <span class="text-medium">中等</span>
+    {% else %}
+      <span class="text-easy">简单</span>
+    {% endif %}
+  {% endif %}
+</td>
+
+
+                  </tr>
+                {% else %}
+                  {% set pdoc = {'_id': pid, 'hidden': true, 'title': '*'} %}
+                  <tr>
+                    <td class="col--status record-status--border">
+                    </td>
+                    <td class="col--name col--problem-name">
+                      {{ problem.render_problem_title(pdoc, invalid=true) }}
+                    </td>
+                    <td class="col--tried">*</td>
+                    <td class="col--ac">*</td>
+                    <td class="col--difficulty">*</td>
+                  </tr>
+                {% endif %}
+              {%- endfor -%}
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-    <div class="section side">
-      <ol class="menu">
-        {{ sidemenu.render_item('list', 'training_detail', {tid:tdoc._id}, label='tasks_list', menu_item='training_detail') }}
-      </ol>
-    </div>
-  </div>
+  {%- endfor -%}
+  <div class="section__body">&nbsp;<!-- space placeholder --></div>
 </div>
-{% endblock %}
