problem_sidebar_normal.html

--- a/packages/ui-default/templates/partials/problem_sidebar_normal.html
+++ b/packages/ui-default/templates/partials/problem_sidebar_normal.html
@@ -65,33 +65,57 @@
     {% if handler.user.hasPerm(perm.PERM_VIEW_DISCUSSION) or _canViewSolution %}
       <li class="menu__seperator"></li>
     {% endif %}
+    <li class="menu__item">
+    <a class="menu__link{% if page_name == 'problem_statistics' %} active{% endif %}" href="{{ url('problem_statistics', pid=pdoc.pid|default(pdoc.docId)) }}">
+        <span class="icon icon-statistics"></span> {{ _('Statistics') }}
+    </a>
+</li>
     {% if handler.user.hasPerm(perm.PERM_VIEW_DISCUSSION) %}
       <li class="menu__item"><a class="menu__link{% if page_name == 'discussion_node' or page_name == 'discussion_detail' %} active{% endif %}" href="{{ url('discussion_node', type='problem', name=pdoc.docId) }}">
         <span class="icon icon-comment--text"></span> {{ _('Discussions') }}{% if discussionCount !== undefined %} ({{ discussionCount }}){% endif %}
       </a></li>
     {% endif %}
     {% if _canViewSolution %}
-      <li class="menu__item"><a class="menu__link{% if page_name == 'problem_solution' %} active{% endif %}" href="{{ url('problem_solution', pid=pdoc.pid|default(pdoc.docId)) }}">
-        <span class="icon icon-comment--text"></span> {{ _('Solutions') }}{% if solutionCount !== undefined %} ({{ solutionCount }}){% endif %}
-      </a></li>
+    <li class="menu__item">
+        <a class="menu__link{% if page_name == 'problem_solution' %} active{% endif %}" href="{{ url('problem_solution', pid=pdoc.pid|default(pdoc.docId)) }}">
+            <span class="icon icon-comment--text"></span> {{ _('Solutions') }}{% if solutionCount !== undefined %} ({{ solutionCount }}){% endif %}
+        </a>
+    </li>
+{% endif %}
+{% if handler.user.hasPerm(perm.PERM_VIEW_HOMEWORK) %}
+    <li class="menu__item">
+        <a class="menu__link{% if page_name == 'video' %} active{% endif %}" href="https://www.xfxcy.com/video/{{ pdoc.pid|default(pdoc.docId) }}" target="_blank">
+            <span class="icon">▷ </span> {{ _('视频讲解') }}
+
+        </a>
+    </li>
+
+{% endif %}
+
+{% if _canViewFiles %}
+    <li class="menu__item">
+        <a class="menu__link{% if page_name == 'problem_files' %} active{% endif %}" href="{{ url('problem_files', pid=pdoc.pid|default(pdoc.docId)) }}">
+            <span class="icon icon-file"></span> {{ _('Files') }}
+        </a>
+    </li>
+{% endif %}
+
+{% if handler.user.own(pdoc, perm.PERM_EDIT_PROBLEM_SELF) or handler.user.hasPerm(perm.PERM_EDIT_PROBLEM) %}
+    <li class="menu__seperator"></li>
+    <li class="menu__item">
+        <a class="menu__link{% if page_name == 'problem_edit' %} active{% endif %}" href="{{ url('problem_edit', pid=pdoc.pid|default(pdoc.docId)) }}">
+            <span class="icon icon-edit"></span> {{ _('Edit') }}
+        </a>
+    </li>
+    {% if not pdoc.reference %}
+        <li class="menu__item">
+            <a class="menu__link{% if page_name == 'problem_config' %} active{% endif %}" href="{{ url('problem_config', pid=pdoc.pid|default(pdoc.docId)) }}">
+                <span class="icon icon-settings"></span> {{ _('Judge Config') }}
+            </a>
+        </li>
     {% endif %}
-      <li class="menu__item"><a class="menu__link{% if page_name == 'problem_files' %} active{% endif %}" href="{{ url('problem_files', pid=pdoc.pid|default(pdoc.docId)) }}">
-        <span class="icon icon-file"></span> {{ _('Files') }}
-      </a></li>
-      <li class="menu__item"><a class="menu__link{% if page_name == 'problem_statistics' %} active{% endif %}" href="{{ url('problem_statistics', pid=pdoc.pid|default(pdoc.docId)) }}">
-        <span class="icon icon-statistics"></span> {{ _('Statistics') }}
-      </a></li>
-    {% if handler.user.own(pdoc, perm.PERM_EDIT_PROBLEM_SELF) or handler.user.hasPerm(perm.PERM_EDIT_PROBLEM) %}
-      <li class="menu__seperator"></li>
-      <li class="menu__item"><a class="menu__link{% if page_name == 'problem_edit' %} active{% endif %}" href="{{ url('problem_edit', pid=pdoc.pid|default(pdoc.docId)) }}">
-        <span class="icon icon-edit"></span> {{ _('Edit') }}
-      </a></li>
-      {% if not pdoc.reference %}
-        <li class="menu__item"><a class="menu__link{% if page_name == 'problem_config' %} active{% endif %}" href="{{ url('problem_config', pid=pdoc.pid|default(pdoc.docId)) }}">
-          <span class="icon icon-settings"></span> {{ _('Judge Config') }}
-        </a></li>
-      {% endif %}
-    {% endif %}
+{% endif %}
+
     {% if page_name == 'problem_detail' %}
       <li class="menu__seperator nojs--hide"></li>
       {% if handler.user.own(pdoc) or handler.user.hasPriv(PRIV.PRIV_READ_PROBLEM_DATA) or handler.user.hasPerm(perm.PERM_READ_PROBLEM_DATA) %}
@@ -99,15 +123,13 @@
           <span class="icon icon-download"></span> {{ _('Download') }}
         </a></li>
       {% endif %}
-      {% if handler.user.hasPriv(PRIV.PRIV_USER_PROFILE) %}
-        <li class="menu__item nojs--hide"><a class="menu__link" href="javascript:;" name="problem-sidebar__copy">
-          <span class="icon icon-copy"></span> {{ _('Copy') }}
-        </a></li>
-      {% endif %}
+      
     {% endif %}
     </ol>
+
   </div>
 </div>
+
 {% if page_name not in ['problem_config', 'problem_detail', 'homework_detail_problem', 'contest_detail_problem'] %}
 <div class="section side">
   <div class="section__header">
